			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

24-Sep-2000
~~~~~~~~~~~
If the home directory is '/' then don't show it as '~' (suggested by
Bernard Jungen).

Added '--show=FILE' option - this will be needed by other ROX
applications, so it needs to be in version 1.0.0.

Bugfix: -d option didn't use realpath before sending to an already-running
filer.

22-Sep-2000
~~~~~~~~~~~
The 'install.sh' script now uses 'printf' instead of 'echo -e' to suppress
newlines (suggested by Bernard Jungen).

Bugfix: Close tool was always disabled on started (reported by Martin Ward).

20-Sep-2000
~~~~~~~~~~~
Added a man-page (Andy Piper).
Changed `install.sh' from bash to sh (Bernard Jungen).

18-Sep-2000 (Release 0.1.28)
~~~~~~~~~~~
Bugfix: menu entries on the pinboard menu weren't being shaded and
	unshaded correctly.

17-Sep-2000
~~~~~~~~~~~
Changed 'Rename Item' to 'Edit Icon' and allowed changing the path that
the icon points to as well as its name.

All i?86 platforms are treated as being equivalent (so, if you compile
on a 386 then it'll still run on a 486).

16-Sep-2000
~~~~~~~~~~~
Pinboard icons can also be renamed.
Pinboard and panel icons can have '~' or '~/' at the start of their
pathnames - this should make it easier to create a system-wide default
panel or pinboard with icons relative to the user's home directory.

14-Sep-2000
~~~~~~~~~~~
Panel icons can now be renamed (suggested by Ewan Mac Mahon).

13-Sep-2000
~~~~~~~~~~~
Changing the toolbar options affects existing windows, not just new ones.
Removed the 'Size Bars' display style and replaced it with 'Permissions',
'Type' and 'Times' styles.

12-Sep-2000
~~~~~~~~~~~
With items that spread over their normal width because they're on the
edge of the window, clicking on the extra bit now works.

Added a size limit of 400K on application icons. This is to prevent
someone trying to crash the filer by linking /tmp/MyApp/AppIcon.xpm
to some huge file!
