@@ -6,11 +6,6 @@ This is a list of features that should/will be added when I have time (or
 when someone sends patches!).
 
 
-BUGS
-
-Lasso box is invisible with some colour schemes.
-
-
 FEATURES FOR 1.1
 
 On Shift-Menu-click, send the filename to a script and parse the results
