@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+25-Sep-2000
+~~~~~~~~~~~
+The lasso box is now drawn so that the box will be in the foreground colour
+over the background, rather than by just inverting the pixel value and hoping
+it's visible (spotted by Philip Hazel).
+
 24-Sep-2000
 ~~~~~~~~~~~
 If the home directory is '/' then don't show it as '~' (suggested by
